masked username and password for ATLAS_URI

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://surbhi:surbhi@cluster0-nxn58.mongodb.net/imdb?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://<username>:<password>@cluster0-nxn58.mongodb.net/imdb?retryWrites=true&w=majority
